--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 	
-	<script src="libraries/jquery-3.1.1.min.js"></script>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<script>
 			setTimeout(function(){
