--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		
 	<script>
 			setTimeout(function(){
 				$(document).ready(function(){
