--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		document.getElementById('button').addEventListener("click", redirect);
 
 		function redirect() {
-			 window.location = "menu.HTML";
+			 window.location = "menu.html";
 		}
 		setTimeout(function(){
 			document.getElementById('button').style.visibility = "visible";
