--- a/menu.html
+++ b/menu.html
@@ -43,13 +43,13 @@
     <script>
        document.getElementById('game1button').addEventListener("click", redirect);
        function redirect() {
-        window.location = "stars.HTML";}
+        window.location = "stars.html";}
    </script>
 
    <script>     
        document.getElementById('game2button').addEventListener("click", redirect);
        function redirect() {
-       window.location = "rainbow.HTML";}
+       window.location = "rainbow.html";}
    </script>
 
   </body>
