--- a/stars.html
+++ b/stars.html
@@ -19,7 +19,7 @@
         document.getElementById('back').addEventListener("click", redirect);
 
          function redirect() {
-        window.location = "menu.HTML";
+        window.location = "menu.html";
     }
     </script>
   </body>
